NAK-935 Created GET APIs for EB & SBI
